--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,8 @@ html {
 body {
 	height: 100%;
 	font-size: 16px;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 span { 
@@ -94,13 +96,14 @@ h1, .secondary {
 h1 {
 	font-family: "Cormorant Garamond", sans-serif; 
 	font-size: 3em; /* 16 x 3 = 48 */ 
+	font-weight: 700;
 	margin-bottom: .5em;
 }
 
 h3 {
 	font-family: "Proza Libre", sans-serif;
 	font-size: 1em; /* 16 x 1 = 16 */
-	font-weight: normal;
+	font-weight: 400;
 	margin-bottom: 1em;
 	color: #777;
 }
@@ -108,6 +111,7 @@ h3 {
 p, input {
 	font-family: "Proza Libre", sans-serif;
 	font-size: 1.25em; /* 16 x 1.25 = 20 */
+	font-weight: 400;
 	margin-bottom: 1em;
 }
 
