--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,25 @@
 
 {% include header.html %}
 
-<p>We believe a worker-run cooperative can transform lives and communities.<p><p>It's our mission to make design methods for problem solving available to all through accessible apprenticeship.</p><p>Stay in the loop and shape the future of the co-op. We'll be hosting meetups and online conversation throughout fall 2017.</p>
+<div id="manifesto">
+	<p>We believe a worker-run cooperative can transform lives and communities.<p><p>It's our mission to make design methods for problem solving available to all through accessible apprenticeship.</p><p>Stay in the loop and shape the future of the co-op. We'll be hosting meetups and online conversation throughout fall 2017.</p>
+</div>
 
-<div id="mc_embed_signup">
+<div id="subscribe">
+	<h3>the D.co inbox</h3>
+
 	<form action="//designcoop.us16.list-manage.com/subscribe/post?u=627516cb06df0fe4a21fc42a6&amp;id=efb9220fe6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-		<div id="mc_embed_signup_scroll">
-			<input class="field" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+			<div>
+				<input class="field full-width email" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+			</div>
+				
+			<div class="left-minor-input">
+				<input class="field" type="text" value="" name="FNAME" id="mce-FNAME" placeholder="first name" required>
+			</div>
+
+			<div class="right-major-input">
+				<input class="field" type="text" value="" name="LNAME" id="mce-LNAME" placeholder="last name" required>
+			</div>
 			
 			<!-- DO NOT REMOVE -->
 			<div style="position: absolute; left: -5000px;" aria-hidden="true">
@@ -16,9 +29,8 @@
 			</div>
 
 			<div class="clear">
-				<input class="button" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+				<input class="button" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">
 			</div>
-		</div>
 	</form>
 </div>
 
