switched to gothic body, light headline

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
 	<link rel="stylesheet" href="assets/main.scss.css">
 
 	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Proza+Libre" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Libre+Franklin" rel="stylesheet">
 
 </head>
 
