added blog structure and confirmation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
 
 	<link rel="canonical" href="http://designcoop.co/">
 
-	<link rel="stylesheet" href="assets/main.scss.css">
+	<link rel="stylesheet" href="/assets/main.scss.css">
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Libre+Franklin" rel="stylesheet">
