--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,13 +10,13 @@
 	<!-- <meta property="og:image" content=""/> -->
 
 	<!-- icons for IE 9 and below -->
-	<!--[if IE]><link rel="shortcut icon" href="assets/images/favicon.ico"><![endif]-->
+	<!--[if IE]><link rel="shortcut icon" href="/assets/images/favicon.ico"><![endif]-->
 
 	<!-- icons for touch - iOS and Android 2.1+  --> 
-	<link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
+	<link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png">
 
 	<!-- icons for Firefox, Chrome, Safari, IE 11+ and Opera -->
-	<link rel="icon" href="assets/images/favicon.png">
+	<link rel="icon" href="/assets/images/favicon.png">
 
 	<title>the Design Cooperative</title>
 	<meta name="description" content="the Design Cooperative: fresh ideas, served daily.">
