--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,11 @@
+<div id="push"></div>
+</div>
+</div>
+
 <footer class="clear">
 	<h3><a href="/blog">blog</a> / <a href="https://trello.com/b/PoGlOFGm/roadmap">roadmap</a> / &copy; 2017 Design Cooperative</h3>
 </footer>
 
-</div>
-</div>
 </body>
 
 </html>
