--- a/assets/main.scss.css
+++ b/assets/main.scss.css
@@ -35,10 +35,6 @@ span {
 	clear: both;
 }
 
-footer {
-	padding-top: 4em; 
-}
-
 input {
 	border-radius: 4px;
 	padding: 6px 8px;
@@ -63,17 +59,25 @@ input.button:hover {
 	background-color: #777;
 }
 
-#wrapper {
+#wrapper, footer {
 	width: 40em;
 	max-width: 90%;
-	min-height: 100%;
 	margin-right: auto;
 	margin-left: auto;
 }
 
+#wrapper {
+	min-height: 100%;
+	margin-bottom: -4em;
+}
+
 #content {
 	padding-top: 4em;
-	padding-bottom: 1em;
+	padding-bottom: 2em;
+}
+
+#push, footer {
+	height: 4em;
 }
 
 #manifesto {
@@ -135,6 +139,7 @@ p, input, .response {
 	font-family: "Libre Franklin", sans-serif;
 	font-size: 1.25em; /* 16 x 1.25 = 20 */
 	font-weight: 400;
+	line-height: 1.5em;
 	margin-bottom: 1em;
 }
 
