--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,6 +28,16 @@
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Libre+Franklin" rel="stylesheet">
 
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107024549-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments)};
+		gtag('js', new Date());
+
+		gtag('config', 'UA-107024549-1');
+	</script>
+
 </head>
 
 <body>
