enhancing folder structure and templating

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
 	<!-- icons for Firefox, Chrome, Safari, IE 11+ and Opera -->
 	<link rel="icon" href="/assets/images/favicon.png">
 
-	<title>the Design Cooperative</title>
+	<title>{{ page.title }} - {{ site.title }}</title>
 	<meta name="description" content="the Design Cooperative: fresh ideas, served daily.">
 
 	<link rel="canonical" href="http://designcoop.co/">
