--- a/_layouts/confirmation.html
+++ b/_layouts/confirmation.html
@@ -5,7 +5,7 @@
 
 <h3>Success!</h3>
 
-<p>Your subscription to the D.co outbox has been confirmed.</p><p>Thank you for caring about a new way to learn, mentor, and design.</p>
+{{ page.content | markdownify }}
 
 <form action="/blog">
     <input class="button" type="submit" value="Check out the blog" name="blog">
