--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@
 {% include header.html %}
 
 <div id="manifesto">
-	<p>We believe a worker-run cooperative can transform lives and communities.</p><p>It’s our mission to make design methods for problem solving available to all through accessible apprenticeship.</p><p>Stay in the loop and shape the future of the co-op. We’ll be hosting meetups and online conversation throughout fall 2017.</p>
+	{{ page.content | markdownify }}
 </div>
 
 <div id="subscribe">
