--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,8 @@
 	{{ page.content | markdownify }}
 </div>
 
+<div class="divider"></div>
+
 <div id="subscribe">
 	<h3>the D.co outbox</h3>
 	<form action="//designcoop.us16.list-manage.com/subscribe/post?u=627516cb06df0fe4a21fc42a6&amp;id=efb9220fe6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
