--- a/assets/main.scss.css
+++ b/assets/main.scss.css
@@ -51,6 +51,7 @@ input.field:focus {
 }
 
 input.button {
+	margin-top: .5em;
 	padding: .5em 2em;
 	border: none;
 	cursor: pointer; 
@@ -86,12 +87,26 @@ input.button:hover {
 }
 
 #manifesto {
-	border-bottom: 6px double #FF007F;
+	margin-bottom: 1em;
 }
 
 #subscribe {
 	width: 30em;
 	max-width: 100%;
+	margin-top: 1em;
+}
+
+.divider {
+	border-bottom: 6px double #FF007F;
+}
+
+.post-preview {
+	border: 1px solid #FF007F;
+	border-radius: 4px;
+	padding: 1em;
+}
+
+.post-excerpt, .post-content {
 	margin-top: 1em;
 }
 
@@ -118,7 +133,7 @@ input.button:hover {
     background-color: #562800;
 }
 
-h1, .secondary {
+h1, h2, .secondary {
 	color: #FF007F;
 }
 
@@ -129,12 +144,20 @@ h1 {
 	margin-bottom: .5em;
 }
 
+h2 {
+	font-family: "Libre Franklin", sans-serif;
+	font-size: 2em; /* 16 x 1.5 = 24 */
+	font-weight: 400;
+	line-height: 1.5em;
+	margin-bottom: .25em;
+}
+
 h3, .mc-field-group .mce_inline_error:last-child {
 	font-family: "Libre Franklin", sans-serif;
 	font-size: 1em; /* 16 x 1 = 16 */
 	font-weight: 400;
 	line-height: 1.5em;
-	margin-bottom: 1em;
+	margin-bottom: .5em;
 }
 
 h3 {
@@ -146,11 +169,15 @@ p, input, .response {
 	font-size: 1.25em; /* 16 x 1.25 = 20 */
 	font-weight: 400;
 	line-height: 1.5em;
-	margin-bottom: 1em;
+	margin-bottom: .5em;
 }
 
 p, .primary {
 	color: #562800;
+}
+
+p:last-child {
+	margin-bottom: 0;
 }
 
 a, a:visited {
@@ -158,7 +185,7 @@ a, a:visited {
 	text-decoration: none;
 }
 
-h1 a:hover {
+h1 a:hover, h2 a:hover {
 	border-bottom: none;
 }
 
