--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,7 +6,7 @@
 <h3>the D.co blog</h3>
 
 {% for post in site.posts %}
-<a href="{{ post.url }}">
+<a class="block-link" href="{{ post.url }}">
 	<div class="post-preview">
 		<a href="{{ post.url }}">
 		<div class="metadata"><h3>{{ post.date | date: "%B %-d, %Y" }} - {{ post.author }}</h3></div>
