--- a/assets/main.scss.css
+++ b/assets/main.scss.css
@@ -105,8 +105,8 @@ input.button:hover {
 }
 
 .post-preview {
-	border: 1px solid #FF007F;
-	border-radius: 4px;
+	background-color: rgba(255, 0, 127, .1);
+	border-radius: 8px;
 	padding: 1em;
 }
 
