--- a/assets/main.scss.css
+++ b/assets/main.scss.css
@@ -58,11 +58,13 @@ input.button {
 	font-size: 1.25em;
 	color: #FFF;
 	background-color: #FF007F;
-	transition: background-color 0.2s ease-in-out 0s;
+	transition: all 0.2s ease-in-out 0s;
 }
 
 input.button:hover {
-	background-color: #777;
+	color: #FF007F;
+	background-color: #FFF;
+	box-shadow: 0 0 4px 4px rgba(255, 0, 127, .1);
 }
 
 .block-link {
@@ -108,6 +110,12 @@ input.button:hover {
 	background-color: rgba(255, 0, 127, .1);
 	border-radius: 8px;
 	padding: 1em;
+	transition: all 0.2s ease-in-out 0s;
+}
+
+.post-preview:hover {
+	background-color: #FFF;
+	box-shadow: 0 0 4px 4px rgba(255, 0, 127, .1);
 }
 
 .post-excerpt, .post-content {
