--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
 	<link rel="stylesheet" href="/assets/main.scss.css">
 
 	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Libre+Franklin" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Libre+Franklin:400,400i,700,700i,800,800i" rel="stylesheet">
 
 	<!-- Global Site Tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107024549-1"></script>
