--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,7 +8,8 @@
 {% for post in site.posts %}
 <a class="block-link" href="{{ post.url }}">
 	<div class="post-preview">
-		<a href="{{ post.url }}">
+		<div class="background-image" style="background-image: url({{ post.lead-image-url }})"></div>
+
 		<div class="metadata"><h3>{{ post.date | date: "%B %-d, %Y" }} - {{ post.author }}</h3></div>
 
 		<div class="title"><h2>{{ post.title }}</h2></div>
