--- a/assets/main.scss.css
+++ b/assets/main.scss.css
@@ -182,30 +182,36 @@ img {
     background-color: #562800;
 }
 
-h1, h2, .secondary {
+h1, h2, h3, h4, h4:before {
+	font-family: "Libre Franklin", sans-serif;
+}
+
+h1, h2, h4, h4:before, .secondary {
 	color: #FF007F;
 }
 
-h1 {
-	font-family: "Cormorant Garamond", sans-serif; 
-	font-size: 3em; /* 16 x 3 = 48 */ 
+h1, h4, h4:before {
+	font-weight: 700;
+}
+
+h2, h3 {
 	font-weight: 400;
+	line-height: 1.5em;
+}
+
+h1 { 
+	font-size: 3em; /* 16 x 3 = 48 */ 
+	font-weight: 600;
 	margin-bottom: .5em;
 }
 
 h2 {
-	font-family: "Libre Franklin", sans-serif;
 	font-size: 2em; /* 16 x 1.5 = 24 */
-	font-weight: 400;
-	line-height: 1.5em;
 	margin-bottom: .25em;
 }
 
 h3, .mc-field-group .mce_inline_error:last-child {
-	font-family: "Libre Franklin", sans-serif;
 	font-size: 1em; /* 16 x 1 = 16 */
-	font-weight: 400;
-	line-height: 1.5em;
 	margin-bottom: .5em;
 }
 
@@ -213,14 +219,8 @@ h3 {
 	color: #777;
 }
 
-h4, h4:before {
-	font-family: "Libre Franklin", sans-serif;
-	color: #FF007F;
-}
-
 h4 {
 	font-size: 2em; /* 16 x 1.5 = 24 */
-	font-weight: 600;
 	line-height: 1.5em;
 	margin: 1em 0;
 	padding: .5em 0 .5em 1em;
@@ -229,13 +229,12 @@ h4 {
 }
 
 h4:before {
-	content: open-quote;
+	font-size: 5em;
 	position: absolute;
 	margin-top: .25em;
 	margin-left: -.25em;
-	font-size: 5em;
-	font-weight: 800;
 	opacity: .1;
+	content: open-quote;
 }
 
 p, li, input, .response {
