--- a/assets/main.scss.css
+++ b/assets/main.scss.css
@@ -119,6 +119,7 @@ img {
 	background-color: rgba(255, 0, 127, .1);
 	border-radius: 8px;
 	padding: 1em;
+	margin-bottom: 1.5em;
 	transition: all 0.2s ease-in-out 0s;
 	overflow:hidden
 }
@@ -126,6 +127,10 @@ img {
 .post-preview:hover {
 	background-color: #FFF;
 	box-shadow: 0 0 4px 4px rgba(255, 0, 127, .1);
+}
+
+.block-link:last-child .post-preview {
+	margin-bottom: 0em;
 }
 
 .background-image {
