--- a/assets/main.scss.css
+++ b/assets/main.scss.css
@@ -141,6 +141,7 @@ img {
   width: 100%;
   height: 100%;
   opacity: .1;
+  background-size: cover;
 
   -webkit-filter: blur(6px) grayscale(100%) brightness(200%);
   -moz-filter: blur(6px) grayscale(100%) brightness(200%);
