--- a/assets/main.scss.css
+++ b/assets/main.scss.css
@@ -170,11 +170,16 @@ img {
 	margin-bottom: 1.5em;
 }
 
+.image-min-margin-bottom {
+	margin-bottom: .25em;
+}
+
 .image img {
 	border-radius: 8px;
 	box-shadow: 4px 4px rgba(255, 0, 127, .1);
 	margin-bottom: 1em;
 }
+
 
 /* styles */
 
