updated message for 2018

--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,10 +1,6 @@
 <div id="subscribe">
-	<h3>the Outbox</h3>
+	<h3>Join us</h3>
 	<form action="//designcoop.us16.list-manage.com/subscribe/post?u=627516cb06df0fe4a21fc42a6&amp;id=efb9220fe6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-			<div class="mc-field-group">
-				<input type="email" value="" name="EMAIL" class="field full-width required email" id="mce-EMAIL" placeholder="email address" required>
-			</div>
-				
 			<div class="mc-field-group left-minor-input">
 				<input type="text" value="" name="FNAME" class="field required" id="mce-FNAME" placeholder="first name" required>
 			</div>
@@ -12,11 +8,16 @@
 			<div class="mc-field-group right-major-input">
 				<input type="text" value="" name="LNAME" class="field required" id="mce-LNAME" placeholder="last name" required>
 			</div>
+			<div class="mc-field-group">
+				<input type="email" value="" name="EMAIL" class="field full-width required email" id="mce-EMAIL" placeholder="email address" required>
+			</div>
+				
 
 			<div id="mce-responses" class="clear">
 				<div class="response" id="mce-error-response" style="display: none"></div>
 				<div class="response" id="mce-success-response" style="display: none"></div>
 			</div>
+	<p>An email once in awhile, no spamming or list selling.</p>
 			
 			<!-- DO NOT REMOVE -->
 			<div style="position: absolute; left: -5000px;" aria-hidden="true">
