changed words and more words and such

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
 	<link rel="icon" href="/assets/images/favicon.png">
 
 	<title>{{ page.title }} - {{ site.title }}</title>
-	<meta name="description" content="the Design Cooperative: fresh ideas, served daily.">
+	<meta name="description" content="the Design Cooperative: real shop talk when we talk shop.">
 
 	<link rel="stylesheet" href="/assets/main.scss.css">
 
