--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 </div>
 
 <footer class="clear">
-	<h3><a href="/blog">blog</a> / <a href="https://trello.com/b/PoGlOFGm/roadmap">roadmap</a> / &copy; 2017 Design Cooperative</h3>
+	<h3><a href="/blog">blog</a> / <a href="https://trello.com/b/PoGlOFGm/roadmap">roadmap</a> / &copy; 2017-18 Design Cooperative</h3>
 </footer>
 
 </body>
